<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >


    <EditText

        android:inputType="textMultiLine"
        android:singleLine="true"
        android:padding="7dp"
        android:background="@drawable/searchbackground"
        android:id="@+id/ediitext"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:hint="@string/hint" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ediitext"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        />

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_below="@+id/ediitext"
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_margin="4dp"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/ortho"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/meaning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/ortho"
                    android:textSize="20sp" />
            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_margin="4dp"
            android:elevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/mainword"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <TextView
            android:paddingStart="5dp"
            android:paddingBottom="5dp"
            android:id="@+id/mainword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainword"
            android:textSize="20sp" />
        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_margin="4dp"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:text="@string/parts"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/partsofspeech"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/parts"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_margin="4dp"
            android:elevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/eample"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/example"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/eample"
                    android:textSize="16sp" />
            </LinearLayout>

    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:minHeight="40dp"
            android:layout_margin="4dp"
            android:elevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/syn"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <TextView
                    android:gravity="center"
                    android:id="@+id/synonym"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/syn"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:minHeight="40dp"
            android:layout_margin="4dp"
            android:elevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/anto"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <TextView
                    android:gravity="center"
                    android:id="@+id/antonym"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/anto"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>

</RelativeLayout>